--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "throttle-async",
+  "name": "@jondotsoy/throttle-async",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,13 +10,16 @@
     "test:watch": "jest --watch",
     "prepare": "npm run build"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "throttle-async"
+  ],
+  "author": "Jonathan Delgado <hi@jon.soy> (https://jon.soy)",
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.1",
     "jest": "^27.3.1",
+    "standard-version": "^9.3.2",
     "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
   }
